fix: fixed the alignment issues with the racket, and margin issues with the birdie. Also added a section title and subtitles

--- a/style.css
+++ b/style.css
@@ -18,11 +18,21 @@
 
 /* Badminton */
 
+.badminton {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 40px;
+    margin-bottom: 80px;
+    padding: 20px 0;
+}
+
 .racket {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    margin-bottom: 40px;
 }
 
 .racket-inner {
